# bevy_ahoy

./: .editorconfig  CLAUDE.md  Cargo.toml  justfile  readme.md
.cargo/: config.toml
notes/: networking-plan.md
src/: camera.rs  input.rs  kcc.rs  lib.rs  main.rs  networking.rs  water.rs
src/client/: cursor.rs  debug.rs  debug_net.rs  mod.rs  networking.rs  player.rs  setup.rs  visuals.rs
src/game/: bindings.rs  cli.rs  client.rs  cursor.rs  debug.rs  debug_net.rs  host.rs  mod.rs  player.rs  scene.rs  server.rs  setup.rs  visuals.rs
src/game/networking/: avian.rs  client.rs  mod.rs  protocol.rs  server.rs
src/host/: mod.rs
src/kcc/: camera.rs  controller.rs  dynamics.rs  fixed_update_utils.rs  input.rs  mod.rs  water.rs
src/server/: debug_net.rs  mod.rs  networking.rs  respawn.rs  setup.rs  spawn.rs
src/shared/: cli.rs  mod.rs  player.rs  scene.rs
src/shared/networking/: avian.rs  mod.rs  protocol.rs
