[package]
name = "bevy_ahoy"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
version = "0.1.0-rc.6"
edition = "2024"
license = "MIT OR Apache-2.0 "
description = "A fun 3D Kinematic Character Controller for Bevy + Avian + BEI."
readme = "readme.md"
repository = "https://github.com/janhohenheim/bevy_ahoy"
keywords = ["kcc", "character", "controller", "source", "quake"]
categories = ["game-development"]
include = ["/src", "/assets", "/license*"]

[features]
default = ["client", "server"]
client = ["networking"]
server = ["networking"]
serialize = ["dep:serde", "avian3d/serialize", "bevy_math/serialize"]
networking = ["serialize", "dep:lightyear"]

[dependencies]
avian3d = { version = "0.6.0-rc.1", default-features = false, features = ["parry-f32", "3d", "f32", "collider-from-mesh"] }
bevy_ecs = { version = "0.18", default-features = false }
bevy_app = { version = "0.18", default-features = false }
bevy_derive = { version = "0.18", default-features = false }
bevy_utils = { version = "0.18", default-features = false }
bevy_math = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_transform = { version = "0.18", default-features = false }
bevy_time = { version = "0.18", default-features = false }
bevy_enhanced_input = { version = "0.24", default-features = false }
tracing = { version = "0.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
lightyear = { git = "https://github.com/aidenstern/lightyear", branch = "avian-0.6", default-features = false, features = ["avian3d", "prediction", "interpolation", "replication"], optional = true }

bevy = { version = "0.18", features = ["track_location", "file_watcher"] }
bevy_mod_mipmap_generator = { version = "0.1.0", git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator" }
bevy_framepace = { version = "0.21.0", git = "https://github.com/aevyrie/bevy_framepace" }
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.bevy_cli.unstable]
#web-multi-threading = true

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
# missing_docs = "warn"
unused_qualifications = "warn"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
needless_lifetimes = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
nonstandard_macro_braces = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[patch.crates-io]
bevy_transform_interpolation = { git = "https://github.com/aidenstern/bevy_transform_interpolation", branch = "patched-0.4" }

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
