[package]
name = "bevy_game"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Aiden Stern <aiden.stern@gmail.com>"]
description = "Server-authoritative multiplayer Bevy game with a Source-style first-person KCC."
readme = "readme.md"
publish = false

[features]
default = ["client", "server"]
client = ["dep:lightyear", "serialize"]
server = ["dep:lightyear", "serialize"]
serialize = ["dep:serde", "avian3d/serialize", "bevy_math/serialize"]

[dependencies]
# kcc deps (modular bevy crates so the kcc module stays self-contained)
avian3d = { version = "0.6.1", default-features = false, features = ["parry-f32", "3d", "f32", "collider-from-mesh"] }
bevy_ecs = { version = "0.18", default-features = false }
bevy_app = { version = "0.18", default-features = false }
bevy_derive = { version = "0.18", default-features = false }
bevy_utils = { version = "0.18", default-features = false }
bevy_math = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_transform = { version = "0.18", default-features = false }
bevy_time = { version = "0.18", default-features = false, features = ["serialize"] }
bevy_enhanced_input = { version = "0.24", default-features = false }
tracing = { version = "0.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

# game deps
bevy = { version = "0.18", features = ["track_location", "file_watcher"] }
bevy_mod_mipmap_generator = { version = "0.1.0", git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator" }
bevy_framepace = { version = "0.21.0", git = "https://github.com/aevyrie/bevy_framepace" }
clap = { version = "4", features = ["derive"] }

lightyear = { git = "https://github.com/cBournhonesque/lightyear.git", branch = "main", optional = true, features = [
    "avian3d",
    "frame_interpolation",
    "interpolation",
    "prediction",
    "replication",
    "input_native",
    "netcode",
    "udp",
    "client",
    "server",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
needless_lifetimes = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
nonstandard_macro_braces = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
